// Protobuf definition for Exchange-O-Gram
syntax = "proto3";

package exchange_o_gram;

option java_package = "io.grpc.demo.exchange_o_gram";
option java_outer_classname = "ExchangeOGramProto";

message WallPostId {
    int64 value = 1;
}

message WallPost {
    WallPostId id = 1;
    string username = 2;  // username of the author
    string caption = 3;
    int64 timestamp_created = 4;  // UTC seconds since epoch
}

message PostToWallRequest {
    WallPost post = 1;
}

message PostToWallResponse {
    WallPostId id = 1;
}

message GetWallPostsRequest {
    string username = 1;  // requests post authored by this user.
}

message GetWallPostsResponse {
    WallPost post = 1;
}

service WallService {
    rpc PostToWall (PostToWallRequest) returns (PostToWallResponse) {}
    rpc GetWallPosts(GetWallPostsRequest) returns (stream GetWallPostsResponse) {}
}
